WIP: Getting up and running with tailwind and project settings

--- a/public/splash.html
+++ b/public/splash.html
@@ -9,17 +9,11 @@
             padding: 0;
             overflow: hidden;
         }
-
-        .center {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
     </style>
+    <title>GitFeather</title>
   </head>
   <body>
-  <div class="center">
+  <div style="height: 100vh;display: flex;align-items: center;justify-content: center;">
     <img src="logo.png" alt="logo" style="width: 100px; height: 100px">
   </div>
   </body>
